implemented the remaining methods